# AIArchitecture

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
datasets/: dataset.csv.dvc
src/: __init__.py
src/data/: prepare_dataset.py
src/ml/: __init__.py  prepare_training_data.py  train_popularity_model.py
src/service/: __init__.py  app.py
